--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/ssr": "^0.2.0",
     "@supabase/supabase-js": "^2.42.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/react": "^18.2.74",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.10.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
